<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="nulls"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ullam temporibus architecto nam, debitis ipsa facere officiis sit facilis vel corrupti velit voluptates animi. Similique velit blanditiis culpa accusamus vel!</string>
    <string name="instagram">Instagram</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget password?</string>
    <string name="password">password</string>
    <string name="phone_number_username_or_email">Phone number, username, or email</string>
    <string name="recents">Recents</string>
    <string name="new_post">New post</string>
    <string name="next">Next</string>

</resources>