<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/nulls"
            android:src="@drawable/insta_logo" />

        <TextView
            android:id="@+id/marqueeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/blink_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/nulls"
            android:src="@drawable/blink_line" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/text_box"
            android:ems="15"
            android:hint="@string/phone_number_username_or_email"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/text_box"
            android:ems="15"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/forget_password"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:backgroundTint="@color/green"
            android:ems="10"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center_vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/green" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@color/gray" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableTint="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_2sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>