<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A3A1A1"
    tools:context=".Post.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:rotation="45"
            android:src="@drawable/baseline_add" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:text="@string/new_post"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/next"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/imageIV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/recents"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnShowFolderCat"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_down" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnMultiSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/drw_cir_bg"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:rotation="180"
            android:src="@drawable/copy" />

        <ImageView
            android:id="@+id/btmCamera"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/drw_cir_bg"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/camera" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>